Added title and author information

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -14,3 +14,11 @@ h3 {
   text-align: justify;
   font-size: 1.4rem;
 }
+
+.copyright {
+  font-size: 2rem;
+  text-align: center;
+  margin: 0 auto;
+  width: 60%;
+  min-width: 20rem;
+}
